@@ -5290,3 +5290,4 @@
   DefaultLocalEntityConnection.writeBlob() now throws exception if multiple rows were affected, refactoring
   Condition.expand() removed, functionality moved to WhereCondition
   PropertyCondition.setCaseSensitive() added
+  Serializer removed
